# rogue-scroll

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml  pytest.yml  types.yml
docs/source/: api.rst  cmd.rst  conf.py  index.rst  passwords.rst
src/rogue_scroll/: __about__.py  __init__.py  __main__.py  _scroll.py  main.py  scroll.py
tests/: distribution.py  test_words.py
