[project]
name = "rogue-scroll"
dynamic = ["version"]
description = "Generate scroll titles from the game rogue"
readme = "README.md"
license = "CC-BY-ND-4.0"
authors = [
    { name = "Jeffrey Goldberg", email = "jeffrey@goldmark.org" }
]
maintainers = [
    { name = "Jeffrey Goldberg", email = "jeffrey@goldmark.org" }
]
requires-python = ">=3.10"
dependencies = []

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[dependency-groups]
dev = [
  "pytest"
]
lint = [
  "ruff",
  "mypy",
]
stats = [
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "scipy>=1.15.2",
    "scipy-stubs>=1.15.2.0",
    "seaborn>=0.13.2",
]

[project.urls]
Repository = "https://github.com/jpgoldberg/rogue-scroll.git"
Issues = "https://github.com/jpgoldberg/rogue-scroll/issues"


[project.scripts]
rogue-scroll = "rogue_scroll.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/rogue_scroll/__about__.py"

[tool.ruff]
line-length = 80

[tool.mypy]
strict = true
